<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Book Inventory</string>
    <string name="sell">Sell</string>
    <string name="finishedat">Finished at:</string>
    <string name="name">Book name:</string>
    <string name="author">Author:</string>
    <string name="b_pages">Book pages:</string>
    <string name="finishedat_req">Finished at <font color='#FF0000'>*</font></string>
    <string name="book_name_req">Book Name <font color='#FF0000'>*</font></string>
    <string name="book_pages_req">Book Pages <font color='#FF0000'>*</font></string>
    <string name="book_author_req">Book Author <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="book_detail_fragment_title">Book Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Book</string>
    <string name="pages">Pages</string>
    <string name="finished_at">Finished\nAt</string>
    <string name="book">Book</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_book">Add new book</string>
    <string name="info_pages">Info</string>
</resources>